2005-12-21  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to devel cycle

2005-12-21  Edward Hervey  <edward@fluendo.com>

	Releasing 0.10.0.2 beta release
	
	* RELEASE:
	* configure.ac:

2005-12-21  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Ignore po/ for the time being
	* gnl/Makefile.am:
	Add gnltypes.h to the list of headers
	Simplify the whole process
	* gnl/gnl.c:
	* gnl/gnl.h:
	* gnl/gnlcomposition.h:
	* gnl/gnlfilesource.h:
	* gnl/gnlobject.h:
	* gnl/gnloperation.h:
	* gnl/gnlsource.h:
	Use local include headers (<gnl/*.h> ==> "*.h")

2005-12-20  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlfilesource.c:
	Cleanup
	* gnl/gnlobject.c: (translate_message_segment_done):
	Handle cases where the GST_SEGMENT_DONE has a format different from
	GST_FORMAT_TIME. In those situations, bump the segment-done value to
	object->media_start.

2005-12-20  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_class_init),
	(gnl_composition_init), (gnl_composition_handle_message),
	(objects_stop_compare):
	Update to use GstBin::handle_message virtual method.
	Fix **stupid** bug in stop_compare GCompareFunc.
	* gnl/gnlobject.c: (gnl_object_class_init), (gnl_object_init),
	(gnl_object_handle_message):
	* gnl/gnlobject.h:
	Update to use GstBin::handle_message virtual method

2005-12-14  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (objects_start_compare),
	(objects_stop_compare):
	Returning the difference of 2 unsigned int, expecting the result
	to be negative is... somewhat idiotic :)

	* gnl/gnlcomposition.c: (gnl_composition_class_init),
	(gnl_composition_add_object):
	* gnl/gnlfilesource.c: (gnl_filesource_class_init):
	* gnl/gnlobject.c: (gnl_object_class_init),
	(gnl_object_covers_func), (translate_message_segment_start),
	(translate_message_segment_done), (update_values):
	* gnl/gnloperation.c: (gnl_operation_class_init):
	* gnl/gnlsource.c: (gnl_source_class_init):