@@ -1,0 +1,9 @@
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = gnonlin.pc
+
+CLEANFILES = gnonlin.pc
+pcinfiles = \
+           gnonlin.pc.in
+
+DISTCLEANFILES = $(pcinfiles:.in=)
+EXTRA_DIST = $(pcinfiles)
